First section response compeleted

--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
             <li>Login</li>
          </ul>
       </nav>
-      <div>
-         <h1>Brand New
+      <div class="section-title">
+         <h1 class="section-subtitle">Brand New
             Group of Architects
          </h1>
-         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+         <p class="section-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
             some form, by injected humour, or randomised words which don't look even</p>
+      </div>
+      <div class="btn-primary">
+         <button class="btn-text"> Explore More</button>
+      </div>
+      <div class="banner">
+         <img src="./images/banner.png" alt="">
       </div>
    </section>
 
