--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
          <h1 class="section-subtitle">Brand New
             Group of Architects
          </h1>
-         <p class="section-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+         <p class="section-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration in
             some form, by injected humour, or randomised words which don't look even</p>
       </div>
       <div class="btn-primary">
@@ -35,6 +36,28 @@
       </div>
       <div class="banner">
          <img src="./images/banner.png" alt="">
+      </div>
+   </section>
+
+   <!-- second section start here -->
+
+   <section class="second-container">
+      <div class="images-section">
+         <img src="./images/team1.png" alt="">
+         <img src="./images/team2.png" alt="">
+         <img src="./images/team3.png" alt="">
+         <img src="./images/team4.png" alt="">
+
+      </div>
+      <div class="feature-section">
+         <h3 class="feature-title">Quick list<span class="text-color1"> of Our</span>    <span class="text-color2">Features</span> </h3>
+         <div class="feature-text">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised words which don't look even
+         </div>
+         <div class="btn-primary2">
+            <button class="btn-text">Explore More</button>
+         </div>
       </div>
    </section>
 
