Working on responsive and boarder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <!-- style links -->
    <link rel="stylesheet" href="style.css">
    <!-- font awesome link -->
+   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 
    <title>G3 Architects</title>
 </head>
