Add unique section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <!-- style links -->
    <link rel="stylesheet" href="style.css">
    <!-- font awesome link -->
-   <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+   
 
    <title>G3 Architects</title>
 </head>
@@ -175,14 +175,14 @@
     
    </section>
 
-   <!-- uniq section for bonus mark -->
+   <!-- unique section for bonus mark -->
    <section class="sixth-container">
       <div class="sixth-section">
-         <h1 class="sixth-section-title">Best team of the year whom revenue acquired to $136 Million</h1>
+         <h1 class="sixth-section-title">Way to Grow Your Business</h1>
          
       </div>
       <div class="special-section">
-         <img src="./images/team2.png" alt="">
+         <img src="./images/Business-Growth-1000x640.png" alt="">
       </div>
    </section>
 
