Align items according to figma file

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
       </div>
       <div class="special-section">
          <img src="./images/Business-Growth-1000x640.png" alt="">
+        <div>
+         <button class="btn-contact">Call Us</button>
+        </div> 
       </div>
    </section>
 
