Unique section add

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
    </section>
 
-   <!-- Our Sponspors section start here -->
+   <!-- Our Sponsors section start here -->
 
    <section class="fifth-container">
       <div class="sponsor-section">
@@ -183,9 +183,6 @@
       </div>
       <div class="special-section">
          <img src="./images/Business-Growth-1000x640.png" alt="">
-        <div>
-         <button class="btn-contact">Call Us</button>
-        </div> 
       </div>
    </section>
 
