--- a/index.html
+++ b/index.html
@@ -63,33 +63,42 @@
       </div>
    </section>
 
-
    <!-- feature you will love section -->
 
    <section class="third-container">
       <div class="feature-enjoy">
-         <div class="feature-enjoy-title">
-            <h2>Features you will love & enjoy</h2>
-            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
-               majority have suffered alteration in some form, by injected humour, or randomised words which don't look
-               even</p>
-            <h4 class="feature-enjoy-title">Dexktop & Mobile Version</h4>
-            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
-               majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-            <h4 class="feature-enjoy-title">Dexktop & Mobile Version</h4>
-            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
-               majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-            <h4 class="feature-enjoy-title">Dexktop & Mobile Version</h4>
-            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
-               majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+         <div class="feature-contain-section">
+            <div class="experience-section-title"><h2 class="feature-main-title">Features you will love & enjoy</h2>
+               <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                  majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p></div>
 
-
+                     <div class="experience-section-title">
+                        <h4 class="feature-enjoy-title">Dexktop & Mobile Version</h4>
+            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+               majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+            
+                        <div class="experience-section-title"> <h4 class="feature-enjoy-title">Drag & Drop Builder</h4>
+                           <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                              majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                           </div>
+            
+                                    <div class="experience-section-title">
+                                       <h4 class="feature-enjoy-title">Awesome Modern Design</h4>
+            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+               majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                    </div>
+                                    <div class="experience-section-title">
+                                       <h4 class="feature-enjoy-title">Super Easy to Edit</h4>
+            <p class="feature-enjoy-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                                    </div>
          </div>
+
          <div class="feature-image">
             <img src="./images/architect.png" alt="">
          </div>
          <div class="btn-primary3">
-            <button class="btn-text3">10+ Year Experience</button>
+            <button class="btn-text3"> <span class="text">10+ Year</span> Experience</button>
          </div>
       </div>
    </section>
