Responsive successfully completed for 688px mobile device only

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
    </section>
 
-   <!-- feature you will love section -->
+   <!-- quick feature you will love section -->
 
    <section class="third-container">
       <div class="feature-enjoy">
@@ -103,7 +103,7 @@
       </div>
    </section>
 
-   <!-- forth section stat -->
+   <!-------------------------------forth section stat here ------------------------->
 
    <section class="forth-container">
 
@@ -196,6 +196,7 @@
    </section>
 
    <!-- footer section -->
+   
    <footer class="footer-section">
       <div class="footer-title">
          All rights reserved copyright@2023 startup landing page design
